feat: Add support for union operator (|) for primitive types
Implements the FHIRPath union operator (|) for Boolean, Integer, and String
types using Spark's array_union() function for deduplication.

Key changes:
- Add UnionOperator class extending SameTypeBinaryOperator
- Enhance SameTypeBinaryOperator with handleOneEmpty() hook for custom
  empty collection semantics
- Register union operator in BinaryOperatorType enum
- Enable union expression parsing in Visitor
- Add comprehensive DSL test suite with 61 test cases covering empty
  collections, single values, arrays, and grouped expressions
- Add test exclusion for cross-type unions not yet supported

Per FHIRPath spec, union eliminates duplicates using equality semantics,
and unioning with an empty collection returns the non-empty collection
with duplicates eliminated.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>